docs(props table): fix asterisk spacing

--- a/packages/react-magma-docs/src/components/props-table/styles.css
+++ b/packages/react-magma-docs/src/components/props-table/styles.css
@@ -47,9 +47,8 @@
 .props-table .prop-name {
   align-items: center;
   display: flex;
-  justify-content: space-between;
 }
 
 .props-table .required {
-  padding-left: 5px;
+  padding-left: 10px;
 }
